sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (l: String)Unit.
Unspecified value parameter l.
		bubbleSort();
                          ^AlgBubbleSort1:7: error: value update is not a member of String
      l(k+1) = l(k);
      ^AlgBubbleSort1:8: error: value update is not a member of String
      l(k) = change;
      ^