sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(l:String)  {
  var change = 0;
  for (k <- 0 to l.length -2) {
    if (l(k) < l(k+1)) {
      change = l(k+1);
      l(k+1) = l(k);
      l(k) = change;
    }
  }
}